240441100038-NAUFAL HUSAIN-MOHAMMAD RIFQI RAZZAN PRATAMA-MODUL2

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,14 @@
 /modul-1/Mahasiswa/build/
 /modul-1/Mahasiswa1/nbproject/private/
 /modul-1/Mahasiswa1/build/
+/modul-1/kipas/nbproject/private/
+/modul-1/coba/nbproject/private/
+/modul-1/coba/build/
+/modul-2/Mahasiswa/nbproject/private/
+/modul-2/Mahasiswa/build/
+/modul-2/Matakuliah/nbproject/private/
+/modul-2/Matakuliah/build/
+/modul-2/Kampus/nbproject/private/
+/modul-2/Kampus/build/
+/modul-2/tugas2/nbproject/private/
+/modul-2/tugas2/build/
